# localpulse

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: gbp-api-access.md  multi-agent-system-spec.md
scripts/: run_pilot.py
src/localpulse/: __init__.py  config.py  container.py
src/localpulse/agents/: common.py  content.py  engagement.py  insights.py  onboarding.py  reputation.py
src/localpulse/api/: main.py
src/localpulse/context/: __init__.py  models.py  regional_calendar.py  repositories.py
src/localpulse/data/: db.py  models.py
src/localpulse/llm/: __init__.py  gateway.py
src/localpulse/orchestrator/: approval.py  cost_guard.py  messaging.py  publisher.py  router.py  tool_registry.py  worker.py
src/localpulse/packs/: __init__.py  base.py
src/localpulse/packs/bakery/: __init__.py
src/localpulse/packs/salon/: __init__.py
src/localpulse/tools/: gbp.py  imagegen.py  websearch.py  whatsapp.py
tests/: conftest.py  test_approval_preferences.py  test_approval_state_machine.py  test_client_scoping.py  test_content_agent.py  test_cost_guard.py  test_e2e_happy_path.py  test_engagement_agent.py  test_pack_loading.py  test_reputation_agent.py  test_salon_pack.py  test_worker.py
